--- a/liquid-split-app/Ls-backend/package.json
+++ b/liquid-split-app/Ls-backend/package.json
@@ -1,7 +1,6 @@
 {
   "name": "Ls-backend",
   "version": "1.0.0",
-  "main": "src/index.js",
   "type": "module",
   "scripts": {
     "start": "node src/index.js",
@@ -11,12 +10,12 @@
   },
   "dependencies": {
     "@prisma/client": "^5.9.0",
-    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "cors": "^2.8.5"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
-    "prisma": "^5.9.0"
+    "prisma": "^5.9.0",
+    "nodemon": "^3.0.2"
   }
 }
