--- a/liquid-split-app/Ls-backend/package.json
+++ b/liquid-split-app/Ls-backend/package.json
@@ -10,13 +10,15 @@
     "migrate": "npx prisma migrate dev"
   },
   "dependencies": {
-    "@prisma/client": "^5.9.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-rate-limit": "^8.1.0",
+    "helmet": "^8.1.0"
   },
   "devDependencies": {
+    "@prisma/client": "^6.17.1",
     "nodemon": "^3.0.2",
-    "prisma": "^5.9.0"
+    "prisma": "^5.22.0"
   }
 }
