--- a/liquid-split-app/Ls-backend/package.json
+++ b/liquid-split-app/Ls-backend/package.json
@@ -10,11 +10,15 @@
     "migrate": "npx prisma migrate dev"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
     "express-rate-limit": "^8.1.0",
-    "helmet": "^8.1.0"
+    "express-validator": "^7.2.1",
+    "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.1"
   },
   "devDependencies": {
     "@prisma/client": "^6.17.1",
