--- a/liquid-split-app/Ls-backend/package.json
+++ b/liquid-split-app/Ls-backend/package.json
@@ -6,7 +6,8 @@
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
     "seed": "node src/seed.js",
-    "migrate": "npx prisma migrate dev"
+    "generate": "prisma generate --schema src/prisma/schema.prisma",
+    "migrate": "prisma migrate dev --schema src/prisma/schema.prisma"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
@@ -17,11 +18,13 @@
     "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.1"
+    "localtunnel": "^1.8.3",
+    "morgan": "^1.10.1",
+    "stripe": "^19.1.0"
   },
   "devDependencies": {
     "@prisma/client": "^6.17.1",
     "nodemon": "^3.0.2",
-    "prisma": "^5.22.0"
+    "prisma": "^6.17.1"
   }
 }
