Refactor Navbar component to be globally provided by App.jsx; add clearUsers script to remove non-seed users

--- a/liquid-split-app/Ls-backend/package.json
+++ b/liquid-split-app/Ls-backend/package.json
@@ -6,6 +6,7 @@
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
     "seed": "node src/seed.js",
+    "clear:users": "node src/clearUsers.js",
     "generate": "prisma generate --schema src/prisma/schema.prisma",
     "migrate": "prisma migrate dev --schema src/prisma/schema.prisma"
   },
