--- a/liquid-split-app/LS-frontend/package.json
+++ b/liquid-split-app/LS-frontend/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.7",
     "cors": "^2.8.5",
+    "ethers": "^6.14.0",
     "express": "^5.1.0",
     "framer-motion": "^12.23.24",
     "react": "^19.1.1",
